--- a/assets/scss/_list.scss
+++ b/assets/scss/_list.scss
@@ -27,6 +27,10 @@
     }
   }
 
+  &-title {
+    margin-bottom: 50px;
+  }
+
   &-list {
     flex-grow: 1;
     margin: 0;
@@ -43,7 +47,7 @@
     &-year {
       padding-top: 6px;
       margin-right: 1.8em;
-      font-size: 1.6em;
+      font-size: 1.8em;
       @include dimmed;
 
       @media #{$media-size-tablet} {
