feat: remove analytics because not supported anymore

--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -33,12 +33,12 @@ a.button {
     background: $light-background-header;
   }
 
-  [data-theme=dark] & {
+  [data-theme="dark"] & {
     background: $dark-background-header;
     color: inherit;
   }
 
-  [data-theme=light] & {
+  [data-theme="light"] & {
     background: $light-background-header;
   }
 
@@ -53,17 +53,17 @@ a.button {
       border-color: $dark-background-secondary;
       color: inherit;
     }
-  
+
     @media (prefers-color-scheme: light) {
       border-color: $light-background-secondary;
     }
-  
-    [data-theme=dark] & {
+
+    [data-theme="dark"] & {
       border-color: $dark-background-secondary;
       color: inherit;
     }
-  
-    [data-theme=light] & {
+
+    [data-theme="light"] & {
       border-color: $light-background-secondary;
     }
 
@@ -74,10 +74,14 @@ a.button {
   }
 
   &.primary {
-    box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
+    box-shadow:
+      0 4px 6px rgba(50, 50, 93, 0.11),
+      0 1px 3px rgba(0, 0, 0, 0.08);
 
     &:hover {
-      box-shadow: 0 2px 6px rgba(50, 50, 93, .21), 0 1px 3px rgba(0, 0, 0, .08);
+      box-shadow:
+        0 2px 6px rgba(50, 50, 93, 0.21),
+        0 1px 3px rgba(0, 0, 0, 0.08);
     }
   }
 
@@ -87,7 +91,7 @@ a.button {
   }
 
   &.small {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 
   &.wide {
@@ -122,17 +126,17 @@ a.button {
       background: $dark-background-secondary;
       color: inherit;
     }
-  
+
     @media (prefers-color-scheme: light) {
       background: $light-background-secondary;
     }
-  
-    [data-theme=dark] & {
+
+    [data-theme="dark"] & {
       background: $dark-background-secondary;
       color: inherit;
     }
-  
-    [data-theme=light] & {
+
+    [data-theme="light"] & {
       background: $light-background-secondary;
     }
   }
