--- a/assets/scss/_tables.scss
+++ b/assets/scss/_tables.scss
@@ -11,20 +11,20 @@
       padding: 12px 15px;
       // Default
       border: 1px solid $light-table-color;
-      
+
       @media (prefers-color-scheme: dark) {
         border: 1px solid $dark-table-color;
       }
-    
+
       @media (prefers-color-scheme: light) {
         border: 1px solid $light-table-color;
       }
-    
-      [data-theme=dark] & {
+
+      [data-theme="dark"] & {
         border: 1px solid $dark-table-color;
       }
-    
-      [data-theme=light] & {
+
+      [data-theme="light"] & {
         border: 1px solid $light-table-color;
       }
     }
@@ -40,18 +40,18 @@
           background-color: $dark-table-color;
           color: $dark-color;
         }
-      
+
         @media (prefers-color-scheme: light) {
           background-color: $light-table-color;
           color: $light-color;
         }
-      
-        [data-theme=dark] & {
+
+        [data-theme="dark"] & {
           background-color: $dark-table-color;
           color: $dark-color;
         }
-      
-        [data-theme=light] & {
+
+        [data-theme="light"] & {
           background-color: $light-table-color;
           color: $light-color;
         }
@@ -62,20 +62,20 @@
       tr {
         // Default
         border: 1px solid $light-table-color;
-        
+
         @media (prefers-color-scheme: dark) {
           border: 1px solid $dark-table-color;
         }
-      
+
         @media (prefers-color-scheme: light) {
           border: 1px solid $light-table-color;
         }
-      
-        [data-theme=dark] & {
+
+        [data-theme="dark"] & {
           border: 1px solid $dark-table-color;
         }
-      
-        [data-theme=light] & {
+
+        [data-theme="light"] & {
           border: 1px solid $light-table-color;
         }
       }
