--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -11,11 +11,11 @@
     background: $light-background-header;
   }
 
-  [data-theme=dark] & {
+  [data-theme="dark"] & {
     background: $dark-background-header;
   }
 
-  [data-theme=light] & {
+  [data-theme="light"] & {
     background: $light-background-header;
   }
 
@@ -82,7 +82,6 @@
   }
 }
 
-
 .submenu {
   background: $light-background-header;
 
@@ -94,11 +93,11 @@
     background: $light-background-header;
   }
 
-  [data-theme=dark] & {
+  [data-theme="dark"] & {
     background: $dark-background-header;
   }
 
-  [data-theme=light] & {
+  [data-theme="light"] & {
     background: $light-background-header;
   }
 
@@ -109,7 +108,8 @@
     overflow: hidden;
   }
 
-  li a, .dropbtn {
+  li a,
+  .dropbtn {
     display: inline-block;
     text-decoration: none;
   }
@@ -126,12 +126,12 @@
     @media (prefers-color-scheme: light) {
       background: $light-background-header;
     }
-    
-    [data-theme=dark] & {
+
+    [data-theme="dark"] & {
       background: $dark-background-header;
     }
-  
-    [data-theme=light] & {
+
+    [data-theme="light"] & {
       background: $light-background-header;
     }
   }
@@ -145,16 +145,16 @@
 
   .dropdown-content a:hover {
     background: $dark-background-header;
-    
+
     @media (prefers-color-scheme: light) {
       background: $light-background-header;
     }
 
-    [data-theme=dark] & {
+    [data-theme="dark"] & {
       background: $dark-background-header;
     }
-  
-    [data-theme=light] & {
+
+    [data-theme="light"] & {
       background: $light-background-header;
     }
   }
